# F1-Telemetry

./: CMakeLists.txt  CMakePresets.json  README.md  build_and_run.sh  t.json
F1-Telemetry/: main.cpp
F1-Telemetry.xcodeproj/: project.pbxproj
F1-Telemetry.xcodeproj/xcuserdata/wojciechbos.xcuserdatad/xcschemes/: xcschememanagement.plist
F1-Telemetry/F1-telemetry/: main.cpp
F1-Telemetry/F1-telemetry.xcodeproj/: project.pbxproj
F1-Telemetry/F1-telemetry.xcodeproj/xcuserdata/wojciechbos.xcuserdatad/xcschemes/: xcschememanagement.plist
Layer1/: .gitignore  CMakeLists.txt
Layer1/include/core/: DataMaps.h  DataTypes.h
Layer1/include/network/: zmqPublisher.h
Layer1/src/: main.cpp
Layer1/src/core/: PacketHandlers.cpp  TelemetryProcessor.cpp
Layer1/src/network/: udpClient.cpp  zmqPublisher.cpp
Layer2/: README.md  main.py  requirements.txt
Layer2/test/: zmqMonitor.py
Layer2/websocket/: websocket_server.py
Layer2/websocket_server/: websocket_server.py
Layer2/zmq/: zmqMonitor.py
Layer2/zmq_client/: zmq_client.py
Layer3/: package-lock.json  package.json
Layer3/src/: App.tsx  PacketTypes.ts
Layer3/src/redux/: packetDispatcher.ts  store.ts
Layer3/src/socket/: socketService.ts
ZMQ_TESTER/: requirements.txt  test.py
docs/: telemetry-fields.md
include/core/: DataMaps.h  DataTypes.h  PacketHandlers.h  TelemetryProcessor.h
include/network/: udpClient.h  zmqServer.h
src/: main.cpp
src/UDP/: udpClient.cpp
src/core/: PacketHandlers.cpp  TelemetryProcessor.cpp  zmqPublisher.cpp  zmqServer.cpp
src/network/: udpClient.cpp
